[gd_scene load_steps=7 format=3 uid="uid://chqjvgdut7blp"]

[ext_resource type="Script" path="res://menu.gd" id="1_7dif1"]
[ext_resource type="FontFile" uid="uid://wrj07pficpyr" path="res://hurmit_font.otf" id="1_xqoku"]
[ext_resource type="StyleBox" uid="uid://bu3jwtmsxd1g" path="res://button_style.tres" id="2_in6ig"]
[ext_resource type="StyleBox" uid="uid://d36lqeme2wp2j" path="res://button_style_hover.tres" id="3_pwv5v"]
[ext_resource type="Material" uid="uid://dt3lnv2l4qake" path="res://materials/blur.tres" id="5_tgmkk"]

[sub_resource type="Theme" id="Theme_deygb"]
default_font = ExtResource("1_xqoku")
default_font_size = 80

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7dif1")

[node name="blur" type="ColorRect" parent="."]
material = ExtResource("5_tgmkk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -20.0
offset_right = 47.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="resume" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 2.08165e-12)
layout_mode = 2
theme = SubResource("Theme_deygb")
theme_override_styles/normal = ExtResource("2_in6ig")
theme_override_styles/hover = ExtResource("3_pwv5v")
text = "resume"

[node name="newgame" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 2.08165e-12)
layout_mode = 2
theme = SubResource("Theme_deygb")
theme_override_styles/normal = ExtResource("2_in6ig")
theme_override_styles/hover = ExtResource("3_pwv5v")
text = "new game"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_deygb")
theme_override_styles/normal = ExtResource("2_in6ig")
theme_override_styles/hover = ExtResource("3_pwv5v")
text = "quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/newgame" to="." method="_on_newgame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
